# artronics-can

./: CMakeLists.txt  Makefile
.github/docker/: Dockerfile
drivers/: CMakeLists.txt
inc/: artronics.h  artronics_config.h  can.h  can_t.h  main.h  stm32f0xx_hal_conf.h
lib/: CMakeLists.txt  can.c  message_processor.c  ring_buffer.c  state.c
lib/hal/: CMakeLists.txt
lib/hal/stm32f0xx/: CMakeLists.txt  hal_can.c  hal_module_id.c  hal_spi.c
lib/hal/tmc5160a/: CMakeLists.txt  hal_tmc5160a.c
lib/inc/: can.h  can_frame.h  message.h  message_processor.h  ring_buffer.h  state.h
lib/inc/hal/: hal_can.h  hal_module_id.h  hal_spi.h
lib/inc/hal/tmc/: hal_tmc5160a.h
src/: can.c  can_t.c  error_handler.c  main.c
tests/: CMakeLists.txt  example.cpp  test_main.cpp
tests/fixtures/: CanFixture.cpp  MessageProcessorFixture.cpp  SpiFixture.cpp  StateFixture.cpp
tests/inc/: CanFixture.h  MessageProcessorFixture.h  MessageProcessorMock.h  RingBufferMock.h  SpiFixture.h  StateFixture.h  test_utils.h
tests/inc/mocks/: CanMock.h  HalCanMock.h  HalModuleIdMock.h  HalSpiMock.h  MessageProcessorMock.h  RingBufferMock.h
tests/mocks/: MessageProcessorFixture.cpp  StateFixture.cpp
tests/src/: test_can.cpp  test_message_processor.cpp  test_ring_buffer.cpp  test_state.cpp
tests/src/hal/stm32f0xx/: test_hal_can.cpp  test_hal_spi.cpp  test_module_id.cpp
tests/src/hal/tmc/: test_hal_tmc5160.cpp
